tests/Unit/Mocks/invalid-project-dir/config/invalid.commands.php
<?php

return [
    'not-a-command',
];
